fix broken css

--- a/assets/sass/_media.scss
+++ b/assets/sass/_media.scss
@@ -146,7 +146,7 @@ img.wp-post-image {
 }
 
 .entry-content .wp-block-gallery {
-	margin: inherit auto;
+	margin: 0 auto;
 }
 
 .entry-attachment img {
